--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,15 @@
     "@types/react-dom": "^18.0.6",
     "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^3.0.0",
+    "app-b-server": "file:./game/tupes",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "shuffle-seed": "^1.1.6",
     "socket.io-client": "^4.5.2",
     "typescript": "^4.8.2",
-    "web-vitals": "^2.1.4",
-    "app-b-server": "file:./game/tupes"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "PORT=3020 react-scripts start",
