--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src", "../server"],
+  "include": ["src", "../server", "types/index.d.ts"],
   "exclude": ["node_modules", "dist"],
   "compilerOptions": {
     "target": "es5",
@@ -10,6 +10,7 @@
     "types": ["@emotion/core"],
     "paths": {
       "@server/src*": ["../server/src*"]
-    }
+    },
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
   }
 }
