scroll on def and reduce size of avatar on mobile

--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@types/socket.io-client": "^3.0.0",
     "app-b-server": "file:./game/tupes",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
