--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.3",
+    "ts-node": "^10.9.1",
     "tsconfig": "^7.0.0",
     "typescript": "^4.8.4"
   }
