--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "NODE_ENV=development nodemon --exec ts-node server/index.ts",
     "start": "nodemon --exec ts-node server/index.ts",
     "build": "cd client && npm install && npm run build"
   },
