--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "cors": "^2.8.5",
+    "csv-parse": "^5.3.2",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.3",
