--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,12 @@
     "declaration": true,
     "allowJs": true,
     "outDir": "dist/",
-    "rootDir": "src",
+    "rootDir": ".",
     "strict": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "include": ["src", "nodemon.js"],
+  "include": ["server", "client", "nodemon.js"],
   "exclude": ["node_modules"]
 }
