--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "app-b-server": "file:./game/tupes",
     "react": "^18.2.0",
     "react-device-detect": "^2.2.2",
+    "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
