--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "shuffle-seed": "^1.1.6",
     "socket.io-client": "^4.5.2",
     "typescript": "^4.8.2",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
