--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
+    "react-type-animation": "^2.1.2",
     "shuffle-seed": "^1.1.6",
     "socket.io-client": "^4.5.2",
     "typescript": "^4.8.2",
