--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.14",
+    "@types/mixpanel": "^2.14.4",
     "@types/node": "^18.11.9",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "csv-parse": "^5.3.2",
     "express": "^4.18.2",
+    "mixpanel": "^0.17.0",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.3",
     "ts-node": "^10.9.1",
