--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-device-detect": "^2.2.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
