--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development nodemon --exec ts-node server/src/index.ts",
+    "dev": "NODE_ENV=development LOG_LEVEL=debug nodemon --exec ts-node server/src/index.ts",
     "start": "nodemon --exec ts-node server/src/index.ts",
     "build": "cd client && npm install && npm run build"
   },
@@ -28,6 +28,7 @@
     "socket.io": "^4.5.3",
     "ts-node": "^10.9.1",
     "tsconfig": "^7.0.0",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "winston": "^3.8.2"
   }
 }
