--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "NODE_ENV=development LOG_LEVEL=debug nodemon --exec ts-node server/src/index.ts",
     "start": "nodemon --exec ts-node server/src/index.ts",
-    "build": "cd client && npm install && npm run build"
+    "build": "cd client && npm install && npm run build",
+    "test": "mocha -r ts-node/register server/tests/**/**.spec.ts"
   },
   "repository": {
     "type": "git",
@@ -30,5 +31,12 @@
     "tsconfig": "^7.0.0",
     "typescript": "^4.8.4",
     "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "socket.io-client": "^4.6.0"
   }
 }
