--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
+    "@types/socket.io-client": "^3.0.0",
+    "@types/uuid": "^9.0.0",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "socket.io-client": "^4.6.0"
