--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mixpanel": "^0.17.0",
     "nodemon": "^2.0.20",
     "socket.io": "^4.5.3",
+    "swiper": "^9.3.2",
     "ts-node": "^10.9.1",
     "tsconfig": "^7.0.0",
     "typescript": "^4.8.4",
