--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-type-animation": "^2.1.2",
     "shuffle-seed": "^1.1.6",
     "socket.io-client": "^4.5.2",
+    "swiper": "^10.0.4",
     "typescript": "^4.8.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
