--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "app-b-server": "file:./game/tupes",
     "react": "^18.2.0",
     "react-animate-height": "^3.1.0",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-device-detect": "^2.2.2",
     "react-div-100vh": "^0.7.0",
     "react-dom": "^18.2.0",
