--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "mixpanel": "^0.17.0",
     "nodemon": "^2.0.20",
+    "shuffle-seed": "^1.1.6",
     "socket.io": "^4.5.3",
     "ts-node": "^10.9.1",
     "tsconfig": "^7.0.0",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
+    "@types/shuffle-seed": "^1.1.0",
     "@types/socket.io-client": "^3.0.0",
     "@types/uuid": "^9.0.0",
     "chai": "^4.3.7",
